<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">photoAlbum</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="picture">Picture</string>
	<string name="select_intro">Long-press a thumbnail to add an image</string>
	<string name="show_intro">Press a thumbnail to display at larger size</string>
	<string name="event">Event:</string>
	<string name="place">Avenue:</string>
	<string name="date">Date:</string>
	<string name="who">With who:</string>
	<string name="btnEditSave">Edit</string>
    

</resources>
