<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/longpress"
        android:textStyle="bold" />

    <Gallery
        android:id="@+id/gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/eventdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event" />

            <EditText
                android:id="@+id/editevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/placedetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place" />

            <EditText
                android:id="@+id/editplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/datedetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/editdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/whodetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who" />

            <EditText
                android:id="@+id/editwho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/editORsave"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnEditSave" />

</LinearLayout>
